<resources>
    <string name="app_name">DataBase2</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">AddActivity</string>

    <string name="action_delete">Delete</string>
    <string name="add_button_text">Add</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="title_activity_show">ShowActivity</string>
</resources>
